--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CountDownClock",
+  "name": "countdown-clock",
   "version": "1.0.0",
   "description": "React Countdown Clock",
   "keywords": [
@@ -7,7 +7,7 @@
   ],
   "author": "Lai Chia Sheng <jason0911520@gmail.com> (http://github.com/groupystinks)",
   "license": "MIT",
-  "homepage": "https://github.com/PeopleMovementToStopHaze/CountDownClock",
+  "homepage": "https://github.com/PeopleMovementToStopHaze/countdown-clock",
   "scripts": {
     "dev": "node server",
     "clean": "rimraf dist",
@@ -15,42 +15,42 @@
     "publish": "npm run build && cp gh-pages.html dist/index.html && git checkout gh-pages && cp dist/* . && git commit -am 'Code update' && git push origin gh-pages && git checkout master"
   },
   "devDependencies": {
-    "autoprefixer-core": "^6.0.1",
-    "babel-core": "^6.1.21",
-    "babel-eslint": "^4.1.5",
-    "babel-loader": "^6.0.1",
-    "babel-plugin-react-display-name": "^2.0.0",
-    "babel-plugin-transform-runtime": "^6.1.18",
-    "babel-plugin-undeclared-variables-check": "^6.1.18",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.1.18",
-    "babel-preset-stage-0": "^6.0.15",
-    "css-loader": "^0.23.0",
+    "autoprefixer-core": "6.0.1",
+    "babel-core": "6.1.21",
+    "babel-eslint": "4.1.5",
+    "babel-loader": "6.0.1",
+    "babel-plugin-react-display-name": "2.0.0",
+    "babel-plugin-transform-runtime": "6.1.18",
+    "babel-plugin-undeclared-variables-check": "6.1.18",
+    "babel-preset-es2015": "6.0.15",
+    "babel-preset-react": "6.1.18",
+    "babel-preset-stage-0": "6.0.15",
+    "css-loader": "0.23.0",
     "eslint": "1.2.1",
     "eslint-config-airbnb": "0.0.8",
     "eslint-loader": "1.0.0",
     "eslint-plugin-react": "3.3.0",
-    "extract-text-webpack-plugin": "^0.9.1",
-    "history": "^1.13.1",
-    "json-loader": "^0.5.2",
-    "postcss-color-rebeccapurple": "^2.0.0",
-    "postcss-loader": "^0.8.0",
-    "react-hot-loader": "^1.3.0",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "extract-text-webpack-plugin": "0.9.1",
+    "history": "1.13.1",
+    "json-loader": "0.5.2",
+    "postcss-color-rebeccapurple": "2.0.0",
+    "postcss-loader": "0.8.0",
+    "react-hot-loader": "1.3.0",
+    "style-loader": "0.13.0",
+    "webpack": "1.12.2",
+    "webpack-dev-server": "1.12.1"
   },
   "dependencies": {
-    "babel-polyfill": "^6.1.19",
-    "es6-promise": "^3.0.2",
+    "babel-polyfill": "6.1.19",
+    "es6-promise": "3.0.2",
     "eslint-config-airbnb": "0.0.8",
-    "file-loader": "^0.8.4",
-    "history": "^1.13.1",
-    "radium": "^0.15.3",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0",
-    "react-router": "^1.0.0",
-    "rimraf": "^2.3.4",
-    "url-loader": "^0.5.6"
+    "file-loader": "0.8.4",
+    "history": "1.13.1",
+    "radium": "0.15.3",
+    "react": "0.14.0",
+    "react-dom": "0.14.0",
+    "react-router": "1.0.0",
+    "rimraf": "2.3.4",
+    "url-loader": "0.5.6"
   }
 }
