--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-config-airbnb": "0.0.8",
     "file-loader": "0.8.4",
     "history": "1.13.1",
+    "mobile-detect": "^1.3.0",
     "radium": "0.15.3",
     "react": "0.14.0",
     "react-dom": "0.14.0",
