--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react": "3.3.0",
     "extract-text-webpack-plugin": "0.9.1",
     "history": "1.13.1",
+    "image-webpack-loader": "^1.6.2",
     "json-loader": "0.5.2",
     "postcss-color-rebeccapurple": "2.0.0",
     "postcss-loader": "0.8.0",
