--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "type": "git",
     "url": "https://github.com/PeopleMovementToStopHaze/countdown-clock"
   },
+  "peerDependencies": {
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
+  },
   "devDependencies": {
     "autoprefixer-core": "6.0.1",
     "babel": "6.3.26",
@@ -51,11 +55,10 @@
   },
   "dependencies": {
     "babel-polyfill": "6.1.19",
+    "babel-runtime": "6.3.19",
     "es6-promise": "3.0.2",
     "eslint-config-airbnb": "0.0.8",
     "history": "1.13.1",
-    "react": "0.14.0",
-    "react-dom": "0.14.0",
     "rimraf": "2.3.4",
     "url-loader": "0.5.6"
   }
